# tiny-yolo_on_raspi

./: README.md  check.sh  jpg_to_npy.py  test.jpg.npy  tyolo.sh
c_neon/: BatchNormalization.i  BatchNormalization.s  CMakeCache.txt  CMakeLists.txt  Conv2d_same_1x1.i  Conv2d_same_1x1.s  Conv2d_same_3x3.i  Conv2d_same_3x3.s  InputLayer.i  InputLayer.s  LeakyReLU.i  LeakyReLU.s  Makefile  MaxPooling2D.i  MaxPooling2D.s  c_neon  cmake_install.cmake  cqt_debug.i  cqt_debug.s  cqt_gen.i  cqt_gen.s  cqt_lib.i  cqt_lib.s  cqt_tyolo.c  cqt_tyolo.i  cqt_tyolo.s  gmon.out  numpy.i  numpy.s  prof_neon.txt  yad2k_yolo.i  yad2k_yolo.s
c_neon/for_neon/: Conv2d_same_3x3.c
c_neon/output/: l00.npy  l04.npy  l16.npy
c_neon/weight/: batch_normalization_1_moving_variance_z.npy  batch_normalization_4_gamma_z.npy  batch_normalization_5_moving_variance_z.npy  batch_normalization_6_gamma_z.npy  batch_normalization_7_gamma_z.npy  batch_normalization_8_beta_z.npy  batch_normalization_8_gamma_z.npy
camera_ctrl/: CMakeCache.txt  CMakeLists.txt  Makefile  camera_ctrl  camera_ctrl.c  camera_ctrl.i  camera_ctrl.s  cmake_install.cmake
camera_test/: Makefile  showimg.sh
img/: 000001.jpg.npy  000058.jpg.npy  gmon.out  multiloop.sh  oneloop.sh  sample.jpg.npy  showImage.py
tools/: yolo_conv.py
